# Silent-Hope-Protocol

./: .gitignore  CREDITS.md  LICENSE.md  PROTOCOL.md  README.md  _api_data.json  pyproject.toml  workflow_b64.txt
.github/workflows/: ci.yml  publish.yml
benchmarks/: benchmark_full.py
examples/: quickstart.py
shp_core/: __init__.py  adapter.py  crypto.py  exceptions.py  license.py  memory.py  network.py  node.py  protocol.py
tests/: __init__.py  test_crypto.py  test_memory.py  test_protocol.py
